added contact html

--- a/index.html
+++ b/index.html
@@ -2,54 +2,61 @@
 <html>
 <head>
 	<title>Eric Holman</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+<nav>
+  <ul>
+    <li><a href="#">Eric Holman Bios</a></li>
+    <li><a href="contact.html">How to Contact Me</a></li>
+  </ul>
+</nav>
+<h1>Eric Holman Bios</h1>
 
-<header>
-<h1>Eric Allen Holman</h1>
-</header>
-
+<section>
 <article>
-  <h2>Dell EMC Technologies, Nashville, TN</h2>
-  <h3>October 2015 to present </h3>
-  <p></p>
+  <h3>Dell EMC Technologies, Nashville, TN</h3>
+  <h4>October 2015 to present </h4>
+  <p>Eric is a technical solutions representative at Dell EMC Technologies. He is responsible for discovering, sizing, designing, and selling datacenter infrastructure and software. He specializes in servers, storage, networking, and enterprise infrastructure. He is also responsible for sizing and designing converged and hyperconverged solutions as well as selling virtualization software and enterprise software.</p>
 </article>
 
 <article>
-  <h2>Verizon Wireless, Mount Juliet, TN</h2>
-  <h3>June 2014 to October 2015</h3>
-  <p></p>
+  <h3>Verizon Wireless, Mount Juliet, TN</h3>
+  <h4>June 2014 to October 2015</h4>
+  <p>Eric was responsible for both sales and techical support for customers. Sales included both consumer and business to business customers. He also was responsible for help manage customer accounts.</p>
 </article>
 
 <article>
-  <h2>Rodizio Brazilian Steakhouse, Nashville, TN </h2>
-  <h3>November 2013 to June 2014</h3>
-  <p></p>
+  <h3>Rodizio Brazilian Steakhouse, Nashville, TN </h3>
+  <h4>November 2013 to June 2014</h4>
+  <p>Eric had to cut meat for guest and entertain. He had cut a lot of meat.</p>
 </article>
 
 <article>
-  <h2>Flood, Bumstead, McCready, & McCarthy, Inc., Nashville, TN</h2>
-  <h3>March 2012 to August 2013  </h3>
-  <p></p>
+  <h3>Flood, Bumstead, McCready, & McCarthy, Inc., Nashville, TN</h3>
+  <h4>March 2012 to August 2013  </h4>
+  <p>Eric was an account manager while working at FBMM. he was responsible for clients personal and business accounts. He had to manage all accounting responsibilities and provide a quarterly financial report for the clients on their accounts.</p>
 </article>
 
 <article>
-  <h2>Dicks Last Resort, Nashville, TN</h2>
-  <h3>May 2011 to June 2013</h3>
-  <p></p>
+  <h3>Dicks Last Resort, Nashville, TN</h3>
+  <h4>May 2011 to June 2013</h4>
+  <p>Eric was a server and bartender while working at Dick's Last Resort. He was always responsible for entertaining guess with quick wit and sense of humor.</p>
 </article>
 
 <article>
-  <h2>Agency of the Performing Arts, Nashville, TN</h2>
-  <h3>Nov. 2010 to Jan. 2011</h3>
-  <p></p>
+  <h3>Agency of the Performing Arts, Nashville, TN</h3>
+  <h4>Nov. 2010 to Jan. 2011</h4>
+  <p>Eric held the role as a agent assistant while at APA. He was responsible typing contract for artist preformances, collecting payment from promoters, and keeping track of deadlines for agent.</p>
 </article>
 
 <article>
-  <h2>Bose, Inc. San Marcos and San Antonio, TX</h2>
-  <h3>Mar. 2006 to Aug. 2010</h3>
-  <p></p>
+  <h3>Bose, Inc. San Marcos and San Antonio, TX</h3>
+  <h4>Mar. 2006 to Aug. 2010</h4>
+  <p>Eric was a deomonstration specialist while working at Bose. He was responsible for demonstrating products, discovering customer needs, and selling solutions. He also held the title as Lead where he would have to train the new hired employees on how to preform the deomonstration specialist role.</p>
 </article>
+</section>
 
+<footer>Copyright Eric Holman</footer>
 </body>
 </html>
