added about me, blog, projects, flexbox, and interactive navigation

--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>How to Contact Me</title>
+	<title>How to Contact Eric</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+
 <nav>
-	<ul>
-		<li><a href="index.html">Eric Holman Bios</a></li>
-		<li><a href="contact.html">How to Contact Me</a></li>
+  <ul id="nav-bar">
+    <li><a href="index.html">Eric Holman's Bios</a></li>
+    <li><a href="contact.html">How to Contact Eric</a></li>
+    <li><a href="projects.html">Eric's Projects</a></li>
+    <li><a href="about-me.html">About Eric Holman</a></li>
+    <li><a href="blog.html">Eric Holman's Blog</a></li>
 	</ul>
 </nav>
 
-<h1>How to Contact Me</h1>
+<h1>How to Contact Eric</h1>
 
 <section>
 <a href="mailto:holman.eric85@gmail.com"><img src="https://myuni.swansea.ac.uk/elts/it-support/email/5167671844_b26432c9ac_b.jpg" class="social-img"></a>
@@ -31,6 +35,6 @@
 </section>
 
 <br>
-<footer>Copyright Eric Holman</footer>
+<footer id="copyright">Copyright Eric Holman</footer>
 </body>
 </html>
