--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Eric Holman</title>
+	<title>Eric Holman's Bios</title>
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 <nav>
-  <ul>
-    <li><a href="#">Eric Holman Bios</a></li>
-    <li><a href="contact.html">How to Contact Me</a></li>
+  <ul id="nav-bar">
+    <li><a href="#">Eric Holman's Bios</a></li>
+    <li><a href="contact.html">How to Contact Eric</a></li>
+    <li><a href="projects.html">My Projects</a></li>
+    <li><a href="about-me.html">About Eric Holman</a></li>
+    <li><a href="blog.html">Eric Holman's Blog</a></li>
   </ul>
 </nav>
-<h1>Eric Holman Bios</h1>
+<h1>Eric Holman's Bios</h1>
 
 <section>
 <article>
@@ -57,6 +60,6 @@
 </article>
 </section>
 
-<footer>Copyright Eric Holman</footer>
+<footer id="copyright">Copyright Eric Holman</footer>
 </body>
 </html>
