--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
 
 <div id="blog-container">
       <!-- Begin Blog 1 -->
-      <section class="blog">
+<!--       <section class="blog">
         <div class="title">
           <h4>My Blog 1</h4>
         </div>
@@ -28,10 +28,10 @@
         <div class="description">
           <p>This is where I need to wirte my blog for the day.</p>
         </div>
-      </section>
+      </section> -->
       <!-- End Blog 1 -->
       <!-- Begin Blog 2 -->
-      <section class="blog">
+     <!--  <section class="blog">
         <div class="title">
           <h4>My Blog 2</h4>
         </div>
@@ -41,10 +41,10 @@
         <div class="description">
           <p>This is where I need to wirte my blog for the day.</p>
         </div>
-      </section>
+      </section> -->
       <!-- End Blog 2 -->
       <!-- Begin Blog 3 -->
-      <section class="blog">
+     <!--  <section class="blog">
         <div class="title">
           <h4>My Blog 3</h4>
         </div>
@@ -54,10 +54,10 @@
         <div class="description">
           <p>This is where I need to wirte my blog for the day.</p>
         </div>
-      </section>
+      </section> -->
       <!-- End Blog 3 -->
       <!-- Begin Blog 4 -->
-      <section class="blog">
+    <!--   <section class="blog">
         <div class="title">
           <h4>My Blog 4</h4>
         </div>
@@ -67,10 +67,10 @@
         <div class="description">
           <p>This is where I need to wirte my blog for the day.</p>
         </div>
-      </section>
+      </section> -->
       <!-- End Blog 4 -->
       <!-- Begin Blog 5 -->
-      <section class="blog">
+     <!--  <section class="blog">
         <div class="title">
           <h4>My Blog 5</h4>
         </div>
@@ -80,11 +80,12 @@
         <div class="description">
           <p>This is where I need to wirte my blog for the day.</p>
         </div>
-      </section>
+      </section> -->
       <!-- End Blog 5 -->
     </div>
 
 <br>
 <footer id="copyright">Copyright Eric Holman</footer>
+<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
